# src/api/controllers/ewards-key/create-ewards-key.js
@@ -2,23 +2,27 @@ import { EwardsKey } from "../../../models/index.js";
 import { errorHelper, logger, getText } from "../../../utils/index.js";
 
 export default async (req, res) => {
-  const { merchantExists, wooCommerceExists } = req;
+  const { merchantId, wooCommerceId } = req;
 
-  let ewardsKey = new EwardsKey(req.body);
-  ewardsKey.ewards_merchant_id = merchantExists._id;
-  ewardsKey.woo_commerce_id = wooCommerceExists._id;
+  let ewards_key = new EwardsKey(req.body)
+  ewards_key.ewards_merchant_id = merchantId
+  ewards_key.woo_commerce_id = wooCommerceId
 
-  ewardsKey = await ewardsKey.save().catch((err) => {
-    logger("00096", '', getText("en", "00096"), "Error", req, "EwardsKey");
-    return res.status(500).json(err.errors);
-  });
-
-  logger("00021", ewardsKey._id, getText("en", "00021"), "Info", req, "EwardsKey");
-  return res.status(200).json({
-    resultMessage: { en: getText("en", "00021") },
-    resultCode: "00021",
-    ewardsKey,
-  });
+  try {
+    ewards_key = await ewards_key.save();
+    logger('00021', ewards_key._id, getText('en', '00021'), 'Info', req, 'EwardsKey');
+    return res.status(200).json({
+      resultMessage: { en: getText('en', '00021') },
+      resultCode: '00021',
+      ewards_key
+    });
+  } catch (err) {
+    logger('00096', '', getText('en', '00096'), 'Error', req, 'EwardsKey');
+    return res.status(500).json({
+      resultMessage: { en: getText('en', '00096') },
+      resultCode: '00096'
+    });
+  }
 };
 
 
