# src/api/routes/ewards-key.js
@@ -1,16 +1,11 @@
 import { Router } from "express";
 const router = Router();
-import {
-  getEwardsKey,
-  createEwardsKey,
-  updateEwardsKey,
-  deleteEwardsKey,
-} from "../controllers/ewards-key/index.js";
-import VerifyEwardsKey from "../middlewares/ewards-key/verify-ewards-woocomm.js";
+import { getEwardsKey, createEwardsKey, updateEwardsKey, deleteEwardsKey, } from "../controllers/ewards-key/index.js";
+import verifyEwardsKey from "../middlewares/ewards-key/verify-ewards-key.js";
 
 router.get("/", getEwardsKey);
-router.post("/", VerifyEwardsKey, createEwardsKey);
-router.put("/:id", VerifyEwardsKey, updateEwardsKey);
+router.post("/", verifyEwardsKey, createEwardsKey);
+router.put("/:id", verifyEwardsKey, updateEwardsKey);
 router.delete("/:id", deleteEwardsKey);
 
 export default router;
